--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical"
-    android:weightSum="10">
-    <fragment
+    android:orientation="vertical">
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragmentMain"
-        android:layout_weight="1"
-        android:name="com.example.gallery.AllFragment"/>
+        android:layout_weight="1" />
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragmentBottom"
-        android:layout_weight="9"
+        android:layout_weight="14"
         android:name="com.example.gallery.BottomFragment"/>
 
 </LinearLayout>
