--- a/app/src/main/res/layout/item_sub_all.xml
+++ b/app/src/main/res/layout/item_sub_all.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:layout_margin="10dp">
+    android:layout_margin="1dp">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/image_gallery"
-        android:id="@+id/imvAll"/>
+        android:id="@+id/imvAll"
+        android:scaleType="centerCrop"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
