--- a/app/src/main/res/layout/item_all.xml
+++ b/app/src/main/res/layout/item_all.xml
@@ -15,5 +15,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rcvSubAll"/>
+        android:id="@+id/rcvSubAll"
+        android:nestedScrollingEnabled="false" />
 </LinearLayout>
