--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="cyan">#33FFFF</color>
     <color name="gray">#FEFEFE</color>
+    <color name="orange">#FFA500</color>
+    <color name="green">#00FF00</color>
 </resources>
