--- a/app/src/main/res/layout/fragment_all.xml
+++ b/app/src/main/res/layout/fragment_all.xml
@@ -40,6 +40,14 @@
                 android:layout_weight="1"
                 android:layout_margin="1dp"
                 android:id="@+id/btnMove" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Xóa"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                android:layout_margin="1dp"
+                android:id="@+id/btnRemove" />
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvAll"
