--- a/app/src/main/res/layout/item_sub_all.xml
+++ b/app/src/main/res/layout/item_sub_all.xml
@@ -29,6 +29,7 @@
             android:button="@drawable/checkbox"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:visibility="gone"
             android:id="@+id/cbxCheckedSubAll"/>
     </RelativeLayout>
 
